Liberalist is not a word

--- a/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -246,7 +246,7 @@ bel.39.d:0 "As the largest socialist party of Belgium and with great plans to re
 bel.39.a:0 "Paul-Henri Spaak will lead the government"
 bel.39.b:0 "Hendrik De Man will lead the government" 
 bel.40.t:0 "LP leads the government"
-bel.40.d:0 "The elections are over and the Liberalist party has won. Though it has been a long time since the liberals lead the Belgian government a fresh wind may be necessary to rebuild the ruined country. The liberalists may not have as grand ambitions as the BWP or Rex/Verdinaso, they believe that little state control and more rights for the citizen are the way to go."
+bel.40.d:0 "The elections are over and the Liberal party has won. Though it has been a long time since the liberals lead the Belgian government a fresh wind may be necessary to rebuild the ruined country. The Liberals may not have as grand ambitions as the BWP or Rex/Verdinaso, they believe that little state control and more rights for the citizen are the way to go."
 bel.40.a:0 "Good Luck Janson!" 
 bel.41.t:0 "King Albert I returns!"
 bel.41.d:0 "As the catholics restore the monarchy King Albert I,formerly known as Van Saksen-Coburg Gotha, now as Van België, sets sail in Canada as the first king restored to his country. Over in Belgium all preparations are made for Albert to swiftly and without issues remount his throne."
@@ -258,7 +258,7 @@ bel.43.t:0 "Plan Spaak"
 bel.43.d:0 "With Paul-Henri Spaak and his syndicalist government firmly in control, they start to unravel the first phases of their plan. To combat the depression caused by Black Monday they have decided to switch to state capitalism. They will start by reforming the ministries into one strong government who will invest heavily in large scale construction projects to reduce unemployment. They will instate smaller provincial councils to better listen to the needs of the people and will try to abstain as much as possible from military matters focusing on rebuilding the economy."
 bel.43.a:0 "Very well"
 bel.44.t:0 "Foundation of the Belgian republic"
-bel.44.d:0 "With the Liberalist party firmly in Belgium can finally start moving towards a republic. Governed by dukes, kings and emperors for all of their history, the Belgian people have decided to renounce the monarchy and move towards a decentralised government. They will turn Belgium into a liberalist state letting the free market decide the economy and posing as little restrictions as possible on the Belgian people."
+bel.44.d:0 "With the Liberal party firmly in Belgium can finally start moving towards a republic. Governed by dukes, kings and emperors for all of their history, the Belgian people have decided to renounce the monarchy and move towards a decentralised government. They will turn Belgium into a liberal state letting the free market decide the economy and posing as little restrictions as possible on the Belgian people."
 bel.44.a:0 "Very well"
 bel.45.t:0 "Reinforce National Unity"
 bel.45.d:0 "With Rex/Verdinaso firmly in control of the government they start to unravel their plan. They will try to strengthen their position by eliminating the opposition and re-militarise Belgium. Then they will seek a preferably weak target to attack. Nothing strengthens the country more than a common enemy, no? Soon the world shall feel the power of an united Belgium!"
