--- a/localisation/KR_Legation_Cities_l_english.yml
+++ b/localisation/KR_Legation_Cities_l_english.yml
@@ -22,9 +22,9 @@ LEC_syndicalist_party_long:0 "Cities’ Syndicalist Party"
 LEC_social_democrat_party:0 "SDL"
 LEC_social_democrat_party_long:0 "Social Democratic League"
 LEC_social_liberal_party:0 "SLL"
-LEC_social_liberal_party_long:0 "Social Liberalist League"
+LEC_social_liberal_party_long:0 "Social Liberal League"
 LEC_market_liberal_party:0 "MLL"
-LEC_market_liberal_party_long:0 "Market Liberalist League"
+LEC_market_liberal_party_long:0 "Market Liberal League"
 LEC_social_conservative_party:0 "Intellectualists"
 LEC_social_conservative_party_long:0 "Intellectualist Faction"
 LEC_authoritarian_democrat_party:0 "IP"
