--- a/localisation/KR_White_Ruthenia_l_english.yml
+++ b/localisation/KR_White_Ruthenia_l_english.yml
@@ -18,10 +18,10 @@ WHR_syndicalist_party:0 "Syndicalists"
 WHR_syndicalist_party_long:0 "Syndicalists"
 WHR_social_democrat_party:0 "Social Democrats"
 WHR_social_democrat_party_long:0 "Social Democrats"
-WHR_social_liberal_party:0 "Social Liberalists"
-WHR_social_liberal_party_long:0 "Social Liberalists"
-WHR_market_liberal_party:0 "Market Liberalists"
-WHR_market_liberal_party_long:0 "Market Liberalists"
+WHR_social_liberal_party:0 "Social Liberal"
+WHR_social_liberal_party_long:0 "Social Liberals"
+WHR_market_liberal_party:0 "Market Liberal"
+WHR_market_liberal_party_long:0 "Market Liberals"
 WHR_social_conservative_party:0 "Social Conservatives"
 WHR_social_conservative_party_long:0 "Social Conservatives"
 WHR_authoritarian_democrat_party:0 "Authoritarian Democratists"
