--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -29,8 +29,8 @@ FNG_syndicalist_party:0 "Manchu Syndicalist Party"
 FNG_syndicalist_party_long:0 "Manchu Syndicalist Party"
 FNG_social_democrat_party:0 "Social Democratic League"
 FNG_social_democrat_party_long:0 "Social Democratic League"
-FNG_social_liberal_party:0 "Social Liberalist League"
-FNG_social_liberal_party_long:0 "Social Liberalist League"
+FNG_social_liberal_party:0 "Social Liberal League"
+FNG_social_liberal_party_long:0 "Social Liberal League"
 FNG_market_liberal_party:0 "Concordia Association"
 FNG_market_liberal_party_long:0 "Xiehehui(Concordia Association)"
 FNG_social_conservative_party:0 "Communications Clique"
