--- a/localisation/focus_l_english.yml
+++ b/localisation/focus_l_english.yml
@@ -394,7 +394,7 @@ SOV_xian_incident:0 "Xi'an Incident"
 SOV_xian_incident_desc:0 "Through our contacts with prominent Kuomintang officials, we should be able to abduct Chiang Kai-Shek and force him to share power with Mao, effectively putting an end to their destructive quarrel so that China can better resist the predations of Japan."
 SOV_xian_incident_tt:0 "If both parties agree, will force a truce between Nationalist and Communist China."
 SOV_anti_capitalist_diplomacy:0 "Anti-Capitalist Diplomacy"
-SOV_anti_capitalist_diplomacy_desc:0 "The worst obstacles to global revolution are, without a doubt, the fat bankers of the USA and the ruthless colonialist oppressors of the United Kingdom. It must always be our primary aim to slap their grasping hands and undermine their liberalist propaganda."
+SOV_anti_capitalist_diplomacy_desc:0 "The worst obstacles to global revolution are, without a doubt, the fat bankers of the USA and the ruthless colonialist oppressors of the United Kingdom. It must always be our primary aim to slap their grasping hands and undermine their liberal propaganda."
 SOV_expand_red_fleet:0 "Expand the Red Fleet"
 SOV_expand_red_fleet_desc:0 "The Red Fleet is pathetically weak compared to the navies of the imperialist powers. We must make its expansion a national priority!"
 SOV_anti_colonialist_rebels:0 "The Comintern"
