Completed railway event localization.

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -119,7 +119,7 @@ FNG_Yingkou_Commercial_Development_desc:0 "The port city of Yingkou serves as Fe
 FNG_Develop_the_Four_Provinces:0 "Develop the Four Provinces"
 FNG_Develop_the_Four_Provinces_desc:0 "The Four Provinces of Manchuria, Heilongjiang, Jilin, Liaoning, and Inner Manchuria, already contain over 30% of China's railroads and feature relatively widespread heavy industry, but if Fengtian is to move into the future these will have to be expanded upon and improved. Ideally this would be acheived solely by the Chinese people, but reality dictates that the Japanese will lead much of the path forward."
 FNG_Reorganize_the_NTC:0 "Reorganise the NTC"
-FNG_Reorganize_the_NTC_desc:0 "Founded by the Fengtian Government shortly after its creation, the National Transportation Committee serves as a planning board for infrastructure construction across the country. The Japanese allege that its foremost aim is to disrupt Mantetsu's operations, and there may be at least some truth to this claim."
+FNG_Reorganize_the_NTC_desc:0 "Founded by the Fengtian Government shortly after its creation, the National Transportation Commission serves as a planning board for infrastructure construction across the country. The Japanese allege that its foremost aim is to disrupt Mantetsu's operations, and there may be at least some truth to this claim."
 #Resume the Wang Yongjiang Reforms Section#
 FNG_Resume_the_Wang_Yongjiang_Reforms:0 "Resume the Wang Yongjiang Reforms"
 FNG_Resume_the_Wang_Yongjiang_Reforms_desc:0 "Zhang Zuolin's financial minister for many years, Wang Yongjiang, was almost singlehandedly responsible for the development of Manchuria from a weak borderland into one of China's most prosperous regions. Unfortunately he was taken from us some years ago, but his work and vision live on."
@@ -491,32 +491,32 @@ fengtian.new.12.t:0 "Chinese Uniforms for Chinese Students"
 fengtian.new.12.d:0 "After some time and effort, as well as considerable expense, several new Chinese-run schools have pooled their resources to produce a new standard uniform for our students. While this may seem like a small change, the uniforms are a symbol of Chinese independence, as well as a disciplined and modern society. Surely a bright new future awaits!"
 fengtian.new.12.a:0 "A point of pride!"
 fengtian.new.13.t:0 "Building the Jilin-Hailong Line"
-fengtian.new.13.d:0 "INSERT"
+fengtian.new.13.d:0 "With the reorganization of the Northeast Transportation Committee complete, several new railways have been proposed for construction and, in some cases, completion. The first major project is the Jilin-Hailong Railway, originally planned in 1927, which met serious delays in construction due to the eruption of war in the south, and concerted Japanese attempts to stall construction. The line has been operating in limited capacity since 1931, but remains incomplete, with both Mantetsu and a collection of smaller Chinese companies vying for the contract to continue building. The Japanese claim, and perhaps correctly, that they could have the railway complete in half the time due to their resources and expertise, but choosing a Chinese company would do a great deal to demonstrate Chinese strength and independence."
 fengtian.new.13.a:0 "Choose a Chinese Company"
 fengtian.new.13.b:0 "Choose Mantetsu"
 fengtian.new.14.t:0 "The Jilin-Hailong Line is Complete"
-fengtian.new.14.d:0 "INSERT"
+fengtian.new.14.d:0 "After months of construction and various unfortunate delays, the Jilin-Hailong line is finally complete, extending the reach of our main rail system into areas otherwise difficult to access. After some review of plans and available resources, the NTC will undoubtedly prepare to issue another contract."
 fengtian.new.14.a:0 "Great news!"
 fengtian.new.15.t:0 "Building the Changchun-Dailai Line"
-fengtian.new.15.d:0 "INSERT"
+fengtian.new.15.d:0 "Proposed by the Japanese as part of a wider project to connect Mantetsu's smaller provincial lines with central lines running through major cities, the Changchun-Dalai line should serve to increase the movement speeds of men and materials significantly from north to south. While the line does have Japanese origins and would serve to extend Mantetsu's reach, NTC planners nonetheless note its practical value, and suggest that it be built anyway. As before, Mantetsu offers to carry out the construction process themselves, but Chinese companies stand ready to perform the same task."
 fengtian.new.15.a:0 "Choose a Chinese Company"
 fengtian.new.15.b:0 "Choose Mantetsu"
 fengtian.new.16.t:0 "The Changchun-Dailai Line is Complete"
-fengtian.new.16.d:0 "INSERT"
+fengtian.new.16.d:0 "The new Changchun-Dailai line now stands as the most modern in China, taking full advantage of more recent technologies, and visually demonstrating the sheer gap in time between the older lines originating in the 1920s. Truly, the Chinese nation is moving toward a brighter future."
 fengtian.new.16.a:0 "Excellent!"
 fengtian.new.17.t:0 "Building the Taonan-Suolun Line"
-fengtian.new.17.d:0 "INSERT"
+fengtian.new.17.d:0 "The final of the NTC's more major construction projects is the Taonan-Suolun Line, which like other recent constructions, serves to connect major lines to otherwise difficult to reach areas. Unlike the previous line, however, this will connect directly to the Chinese Eastern Railway, theoretically keeping Mantetsu's creeping influence further from its operations. All the same, Mantetsu offers to construct the railroad, likely hoping to salvage at least something from the situation."
 fengtian.new.17.a:0 "Choose a Chinese Company"
 fengtian.new.17.b:0 "Choose Mantetsu"
 fengtian.new.18.t:0 "Railway Construction Workers Strike!"
-fengtian.new.18.d:0 "INSERT"
+fengtian.new.18.d:0 "Chinese workers, complaining of inadequate pay and difficult working conditions, have refused to return to work in a carefully coordinated strike. Despite the presence of railway unions in the Northeast, their coordination in this instanace suggests the involvement of the Communications Clique, possibly as part of an attempt to demonstrate their influence or retaliate for some perceived slight. While this turn of events effects them too, the Japanese are happy to watch us squabble amongst ourselves, and the strike will end, but not without causing significant delays."
 fengtian.new.18.a:0 "Unfortunate"
 fengtian.new.19.t:0 "Delays Plague Railway Construction"
-fengtian.new.19.d:0 "INSERT"
+fengtian.new.19.d:0 "The nature of the situation was fairly clear as soon as the first signs appeared; shipments that seemed to unaccountably go missing for several days on end, rails laid at just enough of an incorrect angle to require complete re-construction, and sudden inspections of the labor force by Japanese agents supposedly seeking 'dangerous criminals', inspections which inevitably require the suspension of work. These same tactics were employed by the Japanese during the 1920s against the Fengtian Clique's railway projects, attempting to slow and discredit native railway construction in order to limit competition to Mantetsu, and now they seem to be delaying our efforts once again. Unfortunately, there is little we can do. "
 fengtian.new.19.a:0 "Frustrating"
 fengtian.new.20.t:0 "Delays Plague Mantetsu Railway Construction"
-fengtian.new.20.d:0 "INSERT"
-fengtian.new.20.a:0 "Frustrating"
+fengtian.new.20.d:0 "Despite Mantetsu's excellent engineers and equipment, the current railway construction project has encountered repeated delays as workers unaccountably go missing, materials vanish in the night, and bandits raid the camps alongside the rails, only to disappear before Japanese troops arrive. The local police and our intelligence services are unwilling to do much to investigate or solve these repeated incidents, instead prefering to watch the Japanese squirm. The fact that Mantetsu received the contract to build the railway is well known to the public, and some patriotic citizens appear to have taken matters into their own hands."
+fengtian.new.20.a:0 "What a pity"
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
