Turkestan Caliph Russia Core Event

--- a/localisation/KR_Turkestan_l_english.yml
+++ b/localisation/KR_Turkestan_l_english.yml
@@ -42,3 +42,8 @@ turkestan.8.t:0 "Aid from Xibei San Ma"
 turkestan.8.d.supplies:0 "The Western Warlords have sent aid!"
 turkestan.8.d.war:0 "The Western Warlords have sent aid, and not only that, but joined the war effort against the barbarians. With the Xibei San Ma's help, we will finally put an end to the Turkic menace."
 turkestan.8.a:0 "Great!"
+
+turkestan.9.t:0 "We are Victorious!"
+turkestan.9.d:0 "Kazakhstan has been fully subjugated by Turkestan!  The foul state of the infidels is no more!"
+turkestan.9.a:0 "This is merely the first step to rebuilding the Caliphate"
+turkestan.9.b:0 "We must now only promote where we rule"
