some more work on PRF

--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -94,6 +94,37 @@ IND_totalist:0 "India"
 IND_totalist_ADJ:0 "Indian"
 IND_totalist_DEF:0 "India"
 
+PRF_EMP_authoritarian_democrat:0 "Indian Empire"
+PRF_EMP_authoritarian_democrat_ADJ:0 "Indian"
+PRF_EMP_authoritarian_democrat_DEF:0 "the Indian Empire"
+PRF_EMP_market_liberal:0 "Indian Empire"
+PRF_EMP_market_liberal_ADJ:0 "Indian"
+PRF_EMP_market_liberal_DEF:0 "the Indian Empire"
+PRF_EMP_national_populist:0 "Indian Empire"
+PRF_EMP_national_populist_ADJ:0 "Indian"
+PRF_EMP_national_populist_DEF:0 "the Indian Empire"
+PRF_EMP_paternal_autocrat:0 "Indian Empire"
+PRF_EMP_paternal_autocrat_ADJ:0 "Indian"
+PRF_EMP_paternal_autocrat_DEF:0 "the Indian Empire"
+PRF_EMP_radical_socialist:0 "Indian Socialist Republic"
+PRF_EMP_radical_socialist_ADJ:0 "Indian"
+PRF_EMP_radical_socialist_DEF:0 "the Indian Socialist Republic"
+PRF_EMP_social_conservative:0 "Indian Empire"
+PRF_EMP_social_conservative_ADJ:0 "Indian"
+PRF_EMP_social_conservative_DEF:0 "the Indian Empire"
+PRF_EMP_social_democrat:0 "Indian Empire"
+PRF_EMP_social_democrat_ADJ:0 "Indian"
+PRF_EMP_social_democrat_DEF:0 "the Indian Empire"
+PRF_EMP_social_liberal:0 "Indian Empire"
+PRF_EMP_social_liberal_ADJ:0 "Indian"
+PRF_EMP_social_liberal_DEF:0 "the Indian Empire"
+PRF_EMP_syndicalist:0 "Commune of India"
+PRF_EMP_syndicalist_ADJ:0 "Indian"
+PRF_EMP_syndicalist_DEF:0 "the Commune of India"
+PRF_EMP_totalist:0 "Commune of India"
+PRF_EMP_totalist_ADJ:0 "Indian"
+PRF_EMP_totalist_DEF:0 "the Commune of India"
+
 SAU_ARA_authoritarian_democrat:0 "Saudi Arabia"
 SAU_ARA_authoritarian_democrat_ADJ:0 "Saudi"
 SAU_ARA_authoritarian_democrat_DEF:0 "Saudi Arabia"
@@ -1684,10 +1715,6 @@ LYB_ITA_subject_ADJ:0 "Libyan"
 
 TUN_subject:0 "$OVERLORDADJ$ Tunisia"
 TUN_subject_DEF:0 "$OVERLORDADJ$ Tunisia"
-
-MAD_PRF_subject:0 "Madras State"
-MAD_PRF_subject_DEF:0 "Madras State"
-MAD_PRF_subject_ADJ:0 "Madras"
 
 MYS_PRF_subject:0 "Mysore State"
 MYS_PRF_subject_DEF:0 "Mysore State"
