--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -4970,30 +4970,30 @@ KEN_totalist:0 "Kenya"
 KEN_totalist_ADJ:0 "Kenyan"
 KEN_totalist_DEF:0 "Kenya"
 
-MAD_authoritarian_democrat:0 "Tamil Nadu"
-MAD_authoritarian_democrat_ADJ:0 "Tamil"
-MAD_authoritarian_democrat_DEF:0 "Tamil Nadu"
+MAD_authoritarian_democrat:0 "Madras State"
+MAD_authoritarian_democrat_ADJ:0 "Madras"
+MAD_authoritarian_democrat_DEF:0 "Madras State"
 MAD_market_liberal:0 "Madras Republic"
 MAD_market_liberal_ADJ:0 "Madras"
 MAD_market_liberal_DEF:0 "the Madras Republic"
 MAD_national_populist:0 "Tamil Nadu"
 MAD_national_populist_ADJ:0 "Tamil"
 MAD_national_populist_DEF:0 "Tamil Nadu"
-MAD_paternal_autocrat:0 "Tamil Nadu"
-MAD_paternal_autocrat_ADJ:0 "Tamil"
-MAD_paternal_autocrat_DEF:0 "Tamil Nadu"
-MAD_radical_socialist:0 "Tamil Commune"
+MAD_paternal_autocrat:0 "Madras State"
+MAD_paternal_autocrat_ADJ:0 "Madras"
+MAD_paternal_autocrat_DEF:0 "Madras State"
+MAD_radical_socialist:0 "Tamil Nadu"
 MAD_radical_socialist_ADJ:0 "Tamil"
-MAD_radical_socialist_DEF:0 "the Tamil Commune"
-MAD_social_conservative:0 "Tamil Nadu"
-MAD_social_conservative_ADJ:0 "Tamil"
-MAD_social_conservative_DEF:0 "Tamil Nadu"
-MAD_social_democrat:0 "Tamil Nadu"
-MAD_social_democrat_ADJ:0 "Tamil"
-MAD_social_democrat_DEF:0 "Tamil Nadu"
-MAD_social_liberal:0 "Tamil Republic"
-MAD_social_liberal_ADJ:0 "Tamil"
-MAD_social_liberal_DEF:0 "the Tamil Republic"
+MAD_radical_socialist_DEF:0 "Tamil Nadu"
+MAD_social_conservative:0 "Madras Republic"
+MAD_social_conservative_ADJ:0 "Madras"
+MAD_social_conservative_DEF:0 "the Madras Republic"
+MAD_social_democrat:0 "Madras Republic"
+MAD_social_democrat_ADJ:0 "Madras"
+MAD_social_democrat_DEF:0 "the Madras Republic"
+MAD_social_liberal:0 "Madras Republic"
+MAD_social_liberal_ADJ:0 "Madras"
+MAD_social_liberal_DEF:0 "the Madras Republic"
 MAD_syndicalist:0 "Tamil Commune"
 MAD_syndicalist_ADJ:0 "Tamil"
 MAD_syndicalist_DEF:0 "the Tamil Commune"
