--- a/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -5,34 +5,12 @@ CAL_civil_war:0 "The Second Civil War"
 CAL_civil_war_desc:0 "Chaos rages in the eastern part of the United States as the country has exploded into Civil War. However, we out here in the east remain prosperous and wealthy. If we wish to remain so, we need to keep it to ourselves. We shall not follow the dictates of the east when they interfere with our prosperity."
 
 ### Foci - Political ###
-CAL_restore_the_union:0 "Restore the Union"
-CAL_restore_the_union_desc:0 "Against all odds, we have managed to defeat the radicals in the east. We have brought order to where there was once chaos, bloodshed and anarchy. Now we have a chance to restore the United States back to power and bring the prosperity of the Pacific to the Atlantic."
-CAL_new_california_republic:0 "New Californian Republic"
-CAL_new_california_republic_desc:0 "The east is lost! consumed by the radicals be they the American First or the Syndicalists and then there is MacArthur own ego. To persevere the ideals of America we should set up a new republic in the east where the ideals that made America great can remain."
-CAL_san_fransico_convention:0 "The San Fransico Convention"
-CAL_san_fransico_convention_desc:0 ""
-CAL_pacifican_identity:0 "Pacifican Identity"
-CAL_pacifican_identity_desc:0 ""
-CAL_building_up_california:0 "Californian Investments"
-CAL_building_up_california_desc:0 ""
-CAL_oregon_investment:0 "Oregonian Investments"
-CAL_oregon_investment_desc:0 ""
-CAL_washington_investment:0 "Washington Investments"
-CAL_washington_investment_desc:0 ""
-CAL_new_nationalism:0 "New Nationalism"
-CAL_new_nationalism_desc:0 ""
-CAL_post_war_psa:0 "Post War PSA"
-CAL_post_war_psa_desc:0 ""
-CAL_gi_bill:0 "The Gi Bill"
-CAL_gi_bill_desc:0 ""
-CAL_fate_of_the_unions:0 "Fate of the Unions" 
-CAL_fate_of_the_unions_desc:0 ""
 CAL_beacon_of_democracy:0 "Beacon of Democracy"
 CAL_beacon_of_democracy_desc:0 "With Syndicalists in the Midwest and American First members in the South and everything in between in the rest of the country, the east is losing the democracy of America. We on the Pacific coast remain the last beacon of democracy. We shall remain a bright light in a dark time. "
-CAL_encourge_free_thought:0 "Keep the Constitution"
-CAL_encourge_free_thought_desc:0 "The Constitution of the United States is what made this republic great and while the American First, the Syndicalists and even MacArthur seem to wish to do away with it and bringing ruin to the rest of the country. We here in the east shall keep it."
-CAL_seperation_powers:0 "Separation of Powers"
-CAL_seperation_powers_desc:0 "In order to prevent radicals from rising taking over back here, we must enshrine the concept of separation of powers. We must prevent demagogues like Reed or Long from gaining power and destroying our democracy and destroying our prosperity."
+CAL_encourge_free_thought:0 "Encourge Free Thought"
+CAL_encourge_free_thought_desc:0 ""
+CAL_defend_democarcy:0 "Defend Democracy"
+CAL_defend_democarcy_desc:0 "We stand as one of the last bastions of American Democracy left in the world. While the east has fallen into chaos or worse, we have remained not only prosperous but kept the democratic values that made America great. Let the west coast light shine forever."
 CAL_progressive_capitalism:0 "Progressive Capitalism"
 CAL_progressive_capitalism_desc:0 "We are prosperous while the east has fallen into depression and chaos. Part of that is due to how progressive and capitalist we are here in the East. Those two go hand in hand to create a prosperous country."
 CAL_initiative_referendum:0 "Initiatives and Referendums"
@@ -41,7 +19,8 @@ CAL_immigrant_land:0 "Land of Immigrants"
 CAL_immigrant_land_desc:0 "The Pacific coast has been a land of immigrants from we were even part of America. We should continue to promote this tradition and encourage immigration to the West Coast. Particularly for those fleeing from the eastern chaos."
 CAL_defend_democarcy:0 "Defend Democracy"
 CAL_defend_democarcy_desc:0 "We stand as one of the last bastions of American Democracy left in the world. While the east has fallen into chaos or worse, we have remained not only prosperous but kept the democratic values that made America great. Let the west coast light shine forever."
-
+CAL_new_nationalism:0 "New Nationalism"
+CAL_new_nationalism_desc:0 ""
 ### Foci - Military - Army ###
 CAL_military:0 "Building a military"
 CAL_military_desc:0 "With chaos raging in the east, we need a proper military to defend the Pacific Coast for when the chaos reaches our borders. In order to defend our democracy and prosperity we must prepare the military for such a terrible occasion."
@@ -143,28 +122,11 @@ CAL_expand_mining_companies:0 "Expand mining companies"
 CAL_expand_mining_companies_desc:0 ""
 CAL_support_nbc:0 "Support radio companies"
 CAL_support_nbc_desc:0 "We should support our various radio companies from NBC to CBS. By supporting them we can not only keep the people happy but it will also help let us use the radio for military matters should our beloved republic ever be threatened by outside foes."
-CAL_oil_companies:0 "Support the Oil Companies"
-CAL_oil_companies_desc:0 ""
-CAL_reconstruction:0 "Reconstructing the USA"
-CAL_reconstruction_desc:0 ""
-CAL_reconstruct_the_west:0 "Reconstructing the West"
-CAL_reconstruct_the_west_desc:0 ""
-CAL_reconstruct_the_south:0 "Reconstructing the South"
-CAL_reconstruct_the_south_desc:0 ""
-CAL_reconstruct_the_steel_belt:0 "reconstructing the Midwest"
-CAL_reconstruct_the_steel_belt_desc:0 ""
-CAL_reconstruct_new_england:0 "Reconstruct New England"
-CAL_reconstruct_new_england_desc:0 ""
-CAL_new_america_day:0 "New Day in America"
-CAL_new_america_day_desc:0 ""
-
+CAL_west_coast_bounty:0 "The West Coast's Bounty"
+CAL_west_coast_bounty_desc:0 ""
 ### Foci - Foreign ###
 CAL_foreign_policy:0 "Foreign Policy"
 CAL_foreign_policy_desc:0 ""
-CAL_join_russia:0 "Join Russia"
-CAL_join_russia_desc:0 ""
-CAL_russian_freindship:0 "Russian Friendship"
-CAL_russian_freindship_desc:0 ""
 CAL_join_entente:0 "Join the Entente"
 CAL_join_entente_desc:0 ""
 CAL_canadian_freindship:0 "Canadian Friendship"
@@ -194,7 +156,7 @@ CAL_american_autonomy_desc:0 ""
 CAL_school_of_ameirca:0 "School of America"
 CAL_school_of_ameirca_desc:0 ""
 CAL_american_business:0 "American Business Ties"
-
+CAL_american_business_desc:0 ""
 ### Ideas ###
 california_rearmament:0 "California War Industries"
 hawaii_revolts:0 "The Hawaii Revolts"
@@ -224,8 +186,9 @@ CAL_nbc_radio:0 "National Broadcasting Company"
 CAL_jappanese_businesses:0 "Japanese-Pacific Business ties"
 CAL_aog_offices:0 "German – Pacific business ties"
 CAL_general_strike_malus:0 "West Coast General Strike"
-CAL_soldiers_bill:0 "G.I Bill"
-
+CAL_free_thought:0 "Free Thought"
+CAL_land_of_immigrant:0 "Land of Immigrants"
+CAL_californian_nationalism:0 "Pacifican Nationalism"
 ### Parties ###
 CAL_totalist_party:0 "PCP"
 CAL_totalist_party_long:0 "Pacific Communist Party"
@@ -514,35 +477,3 @@ pacificstates.55.a:0 "How humiliating !"
 pacificstates.56.t:0 "PSA refused to sign peace treaty!"
 pacificstates.56.d:0 "The Pacific States refused our generous peace offer and renewed military actions..."
 pacificstates.56.a:0 "They will pay for this..."
-pacificstates.100.t:0 "Fate of the Unions"
-pacificstates.100.d:0 "Now that the civil war has come to an end, many are wondering what we should do about the unions allied with the CSA. Some wish those unions banned arguing that they will try to cause chaos in the Pacific States and do more harm then good. While other arguing the opposite saying that they do more good then harm and banning them will radicalise them further."
-pacificstates.100.a:0 "Unions contribute to prosperity"
-pacificstates.100.b:0 "Unions are not needed for prosperity"
-pacificstates.101.t:0 "The Underground Railroad?"
-pacificstates.101.d:0 "The CSA have emerged victorious in the civil war. As they begin to implement their radical agenda that will destroy the lives of Americans throughout the rest of America a number of political leaders have come together to discuss the idea of an Underground Railroad that would help bring in refugees away from syndicalism. This will cost time and money but will eventually be worth it they say."
-pacificstates.101.a:0 "Establish the Railroad!"
-pacificstates.101.b:0 "It is not Worth our Time"
-pacificstates.102.t:0 "The Underground Railroad?"
-pacificstates.102.d:0 "The American Union State has emerged victorious in the civil war. As they begin to implement their radical agenda that will destroy the lives of Americans throughout the rest of America a number of political leaders have come together to discuss the idea of an Underground Railroad that would help bring in refugees from the AUS. This will cost time and money but will eventually be worth it they say."
-pacificstates.102.a:0 "Establish the Railroad!"
-pacificstates.102.b:0 "It is not worth our time"
-pacificstates.103.t:0 "The Underground Railroad?"
-pacificstates.103.d:0 "MacArthur has emerged victorious in the civil war and just as we predicted he has moved to trample the rights of Americans throughout the country. It was good that we left before his tyranny could come to our shores. However now political leaders are wondering about setting up an underground railroad to bring others out of tyranny. "
-pacificstates.103.a:0 "Establish the Railroad!"
-pacificstates.103.b:0 "It is not worth our time"
-pacificstates.104.t:0 "Treaty of Friendship?"
-pacificstates.104.d:0 "The United States has managed to win the civil war without succumbing to tyranny. Democracy now prevails in the east. Many political leaders are suggesting we send an offer of friendship to try and improve relations with the USA. "
-pacificstates.104.a:0 "Send the offer"
-pacificstates.105.t:0 "Refugees from the CSA"
-pacificstates.105.d:0 "Refugees have recently arrived from the CSA. They have crossed over the Rockies to try and establish a new life in the Pacific States. Many of them are business friendly men and women who are aghast at the radical transformation going on in the rest of the country."
-pacificstates.105.a:0 "Welcome Friends"
-pacificstates.106.t:0 "Refugees from the AUS"
-pacificstates.106.d:0 "Refugees have recently arrived from the AUS. They have crossed over the Rockies to try and establish a new life in the Pacific States. Many of them are those who wish to escape the racial injustice that is being left unchecked and a surprising number of progressives who wish to escape the AUS. "
-pacificstates.106.a:0 "Welcome Friends"
-pacificstates.107.t:0 "Refugees from MacArthur's Tyranny"
-pacificstates.107.d:0 "Refugees have recently arrived from the USA. They have crossed over the Rockies to try and establish a new life in the Pacific States. All in an attempt to flee from the tyranny that is MacArthur's regime in America. "
-pacificstates.107.a:0 "Welcome Friends"
-pacificstates.108.t:0 "Treaty with the PSA?"
-pacificstates.108.d:0 "The PSA have sent us a treaty to establish better relations between us and them. This has caused a split within the government. Some say we should sign the treaty to improve relations as it could lead to reunification sooner. On the other hand just as many say that signing the treaty will prevent that since we are acknowledging them as a separate state."
-pacificstates.108.a:0 "Sign the Treaty"
-pacificstates.108.b:0 "Don't Sign the Treaty"
