Fengtian Japanese Aid/Concordia Association event, minor localization changes.

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -13,6 +13,7 @@ FNG_Backward_Industry:0 "Backward Industry"
 FNG_Unscrupulous_Governance:0 "Unscrupulous Governance"
 FNG_Investment_Dearth:0 "Investment Dearth"
 FNG_Land_Reform_Underway:0 "Land Reform Underway"
+FNG_Japanese_Aid_Cut:0 "Japanese Aid Cut"
 
 ### Informal Empire Mechanic ###
 FNG_informal_empire_1:0 "Expel the Japanese Bandits!"
@@ -455,7 +456,7 @@ fengtian.new.2.d:0 "The Communications Clique, with its widespread influence in 
 fengtian.new.2.a:0 "Unfortunate but necessary"
 #Land Reform Events#
 fengtian.new.3.t:0 "Land Disputes in Heilongjiang"
-fengtian.new.3.d:0 "As a product of various socio-economic changes, such as the steady shift of seasonal workers from the agricultural north to industrial jobs in Fengtian Province, land disputes have begun to flare up at an alarming rate. Normally these matters would be handled by the local Xiangshen, landlords, retired officials, clan elders, and scholars who 'represent' peasants in meetings with county officials. On this occasion, however, a large collection of peasants have bypassed all local officials and are attempting to petition the government directly. Normally such a petition, unworthy of the central government's attention, would be brushed aside, but unfortunately the situation has attracted the attention of the Asahi Shimbun, a leftist Japanese newspaper. \n\n The local Xiangshen, believing this matter to be solely within their jurisdiction, request that they be allowed to settle the matter themselves, brushing aside accusations of favouritism and corruption by the peasants. On the one hand, throughout all of Chinese history the Central Government has never truly been able to exert influence over the Xiangshen, but on the other the peasants grow increasingly desperate, and the entire region is watching."
+fengtian.new.3.d:0 "As a product of various socio-economic changes, such as the steady shift of seasonal workers from the agricultural north to industrial jobs in Fengtian Province, land disputes have begun to flare up at an alarming rate. Normally these matters would be handled by the local Xiangshen, landlords, retired officials, clan elders, and scholars who 'represent' peasants in meetings with county officials. On this occasion, however, a large collection of peasants have bypassed local authorities and are attempting to petition the government directly. Normally such a petition, unworthy of the central government's attention, would be brushed aside, but unfortunately the situation has attracted the attention of the Asahi Shimbun, a leftist Japanese newspaper. \n\n The local Xiangshen, believing this matter to be solely within their jurisdiction, request that they be allowed to settle the matter themselves, brushing aside accusations of favouritism and corruption by the peasants. On the one hand, throughout all of Chinese history the Central Government has never truly been able to exert influence over the Xiangshen, but on the other the peasants grow increasingly desperate, and the entire region is watching."
 fengtian.new.3.a:0 "Support the Xiangshen"
 fengtian.new.3.b:0 "Support Local Land Reform"
 fengtian.new.4.t:0 "Clamour for Further Land Reform"
@@ -494,14 +495,14 @@ fengtian.new.12.d:0 "After some time and effort, as well as considerable expense
 fengtian.new.12.a:0 "A point of pride!"
 #NTC Railway Construction#
 fengtian.new.13.t:0 "Building the Jilin-Hailong Line"
-fengtian.new.13.d:0 "With the reorganisation of the Northeast Transportation Committee complete, several new railways have been proposed for construction and, in some cases, completion. The first major project is the Jilin-Hailong Railway, originally planned in 1927, which met serious delays in construction due to the eruption of war in the south, and concerted Japanese attempts to stall construction. The line has been operating in limited capacity since 1931, but remains incomplete, with both Mantetsu and a collection of smaller Chinese companies vying for the contract to continue building. The Japanese claim, and perhaps correctly, that they could have the railway complete in half the time due to their resources and expertise, but choosing a Chinese company would do a great deal to demonstrate Chinese strength and independence."
+fengtian.new.13.d:0 "With the reorganisation of the Northeast Transportation Committee complete, several new railways have been proposed for construction and, in some cases, completion. The first major project is the Jilin-Hailong Railway, originally planned in 1927, which met serious delays in construction due to the eruption of war in the south, and concerted Japanese attempts to stall it. The line has been operating in limited capacity since 1931, but remains incomplete, with both Mantetsu and a collection of smaller Chinese companies vying for the contract to continue building. The Japanese claim, and perhaps correctly, that they could have the railway complete in half the time due to their resources and expertise, but choosing a Chinese company would do a great deal to demonstrate Chinese strength and independence."
 fengtian.new.13.a:0 "Choose a Chinese Company"
 fengtian.new.13.b:0 "Choose Mantetsu"
 fengtian.new.14.t:0 "The Jilin-Hailong Line is Complete"
 fengtian.new.14.d:0 "After months of construction and various unfortunate delays, the Jilin-Hailong line is finally complete, extending the reach of our main rail system into areas otherwise difficult to access. After some review of plans and available resources, the NTC will undoubtedly prepare to issue another contract."
 fengtian.new.14.a:0 "Great news!"
 fengtian.new.15.t:0 "Building the Changchun-Dailai Line"
-fengtian.new.15.d:0 "Proposed by the Japanese as part of a wider project to connect Mantetsu's smaller provincial lines with central lines running through major cities, the Changchun-Dalai line should serve to increase the movement speeds of men and materials significantly from north to south. While the line does have Japanese origins and would serve to extend Mantetsu's reach, NTC planners nonetheless note its practical value, and suggest that it be built anyway. As before, Mantetsu offers to carry out the construction process themselves, but Chinese companies stand ready to perform the same task."
+fengtian.new.15.d:0 "The NTC's next major project, but originally proposed by the Japanese to connect Mantetsu's smaller provincial lines with central lines running through major cities, the Changchun-Dalai line should serve to ease the movement of men and materials from North to South significantly. While the line does have Japanese origins and would serve to extend Mantetsu's reach, NTC planners nonetheless note its practical value. As before, Mantetsu offers to carry out the construction process themselves, but Chinese companies stand ready to perform the same task."
 fengtian.new.15.a:0 "Choose a Chinese Company"
 fengtian.new.15.b:0 "Choose Mantetsu"
 fengtian.new.16.t:0 "The Changchun-Dailai Line is Complete"
@@ -511,15 +512,26 @@ fengtian.new.17.t:0 "Building the Taonan-Suolun Line"
 fengtian.new.17.d:0 "The final of the NTC's more major construction projects is the Taonan-Suolun Line, which like other recent constructions, serves to connect major lines to otherwise difficult to reach areas. Unlike the previous line, however, this will connect directly to the Chinese Eastern Railway, theoretically keeping Mantetsu's creeping influence further from its operations. All the same, Mantetsu offers to construct the railroad, likely hoping to salvage at least something from the situation."
 fengtian.new.17.a:0 "Choose a Chinese Company"
 fengtian.new.17.b:0 "Choose Mantetsu"
-fengtian.new.18.t:0 "Railway Construction Workers Strike!"
-fengtian.new.18.d:0 "Chinese workers, complaining of inadequate pay and difficult working conditions, have refused to return to work in a carefully coordinated strike. Despite the presence of railway unions in the Northeast, their coordination in this instance suggests the involvement of the Communications Clique, possibly as part of an attempt to demonstrate their influence or retaliate for some perceived slight. While this turn of events effects them too, the Japanese are happy to watch us squabble amongst ourselves, and the strike will end, but not without causing significant delays."
-fengtian.new.18.a:0 "Unfortunate"
-fengtian.new.19.t:0 "Delays Plague Railway Construction"
-fengtian.new.19.d:0 "The nature of the situation was fairly clear as soon as the first signs appeared; shipments that seemed to unaccountably go missing for several days on end, rails laid at just enough of an incorrect angle to require complete re-construction, and sudden inspections of the labor force by Japanese agents supposedly seeking 'dangerous criminals', inspections which inevitably require the suspension of work. These same tactics were employed by the Japanese during the 1920s against the Fengtian Clique's railway projects, attempting to slow and discredit native railway construction in order to limit competition to Mantetsu, and now they seem to be delaying our efforts once again. Unfortunately, there is little we can do. "
-fengtian.new.19.a:0 "Frustrating"
-fengtian.new.20.t:0 "Delays Plague Mantetsu Railway Construction"
-fengtian.new.20.d:0 "Despite Mantetsu's excellent engineers and equipment, the current railway construction project has encountered repeated delays as workers unaccountably go missing, materials vanish in the night, and bandits raid the camps alongside the rails, only to disappear before Japanese troops arrive. The local police and our intelligence services are unwilling to do much to investigate or solve these repeated incidents, instead preferring to watch the Japanese squirm. The fact that Mantetsu received the contract to build the railway is well known to the public, and some patriotic citizens appear to have taken matters into their own hands."
-fengtian.new.20.a:0 "What a pity"
+fengtian.new.18.t:0 "The Taonan-Suolun Line is Complete"
+fengtian.new.18.d:0 "With the completion of the Taonan-Suolin Line, the Northeast Transportation Commission can focus on smaller projects, and on ensuring that China's railways remain Chinese. This second task will undoubtedly be a challenge all to itself."
+fengtian.new.18.a:0 "Wansui!"
+fengtian.new.19.t:0 "Railway Construction Workers Strike!"
+fengtian.new.19.d:0 "Chinese workers, complaining of inadequate pay and difficult working conditions, have refused to return to work in a carefully coordinated strike. Despite the presence of railway unions in the Northeast, their coordination in this instance suggests the involvement of the Communications Clique, possibly as part of an attempt to demonstrate their influence or retaliate for some perceived slight. \n\n While this turn of events effects them too, the Japanese are happy to watch us squabble amongst ourselves, and the strike will end, but not without causing significant delays."
+fengtian.new.19.a:0 "Unfortunate"
+fengtian.new.20.t:0 "Delays Plague Railway Construction"
+fengtian.new.20.d:0 "The nature of the situation was fairly clear as soon as the first signs appeared; shipments that seemed to unaccountably go missing for several days on end, rails laid at just enough of an incorrect angle to require complete re-construction, and sudden inspections of the labor force by Japanese agents supposedly seeking 'dangerous criminals', inspections which inevitably required the suspension of work. \n\n These same tactics were employed by the Japanese during the 1920s against the Fengtian Clique's railway projects, attempting to slow and discredit Chinese railway construction in order to limit competition to Mantetsu, and now they seem to be delaying our efforts once again. Unfortunately, there is little we can do. "
+fengtian.new.20.a:0 "Frustrating"
+fengtian.new.21.t:0 "Delays Plague Mantetsu Railway Construction"
+fengtian.new.21.d:0 "Despite Mantetsu's excellent engineers and equipment, the current railway construction project has encountered repeated delays as workers unaccountably go missing, materials vanish in the night, and bandits raid the camps alongside the rails, only to disappear before Japanese troops arrive. \n\n The local police and our intelligence services are unwilling to do much to investigate or solve these repeated incidents, instead preferring to watch the Japanese squirm. The fact that Mantetsu received the contract to build the railway is well known to the public, and some patriotic citizens appear to have taken matters into their own hands."
+fengtian.new.21.a:0 "What a pity"
+#Imperial Fury/Japanese Aid Cut#
+fengtian.new.22.t:0 "Imperial Fury"
+fengtian.new.22.d:0 "Incensed by the decreasing power of their political proxy in the Assembly, the Japanese government today issued a statement declaring an end to various Fengtian aid programs, including sectors such as research, industrial development, agricultural development, and military armament. The aid should return in some time, as the Japanese cannot afford to let us grow too weak, but until then many functions of our state are crippled."
+fengtian.new.22.a:0 "A hard lesson"
+fengtian.new.22.b:0 "A perfect time to strike!"
+fengtian.new.23.t:0 "Japanese Aid Returns"
+fengtian.new.23.d:0 "Apparently feeling that their lesson in obedience is clear and punishing enough, the Japanese have resumed their aid. We should be careful about provoking them in the future, and make sure not to push the Concordia Association too far out of the Assembly before we are ready."
+fengtian.new.23.a:0 "At last!"
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
