Paving the way for real work later

--- a/localisation/KR_Chile_l_english.yml
+++ b/localisation/KR_Chile_l_english.yml
@@ -1,52 +1,52 @@
 ﻿l_english:
 
 ### Parties ###
-CHL_social_democrat_party:0 "PR"
-CHL_social_democrat_party_long:0 "Facción de Izquierda del Partido Radical"
+CHL_social_democrat_party:0 "PC"
+CHL_social_democrat_party_long:0 "Pacto de Calais"
 CHL_social_conservative_party:0 "APL"
 CHL_social_conservative_party_long:0 "Alianza Popular Libertadora"
 CHL_authoritarian_democrat_party:0 "AR"
 CHL_authoritarian_democrat_party_long:0 "Acción Republicana"
-CHL_paternal_autocrat_party:0 "Línea dura del Ejército"
-CHL_paternal_autocrat_party_long:0 "Línea dura del Ejército"
-CHL_national_populist_party:0 "CON"
-CHL_national_populist_party_long:0 "Comité de Oficiales Nacionalistas"
-CHL_social_liberal_party:0 "PLc"
-CHL_social_liberal_party_long:0 "Partido Liberal Chileno"
+CHL_paternal_autocrat_party:0 "PRI"
+CHL_paternal_autocrat_party_long:0 "Partido Republicano Ibañista"
+CHL_national_populist_party:0 "COCEAT"
+CHL_national_populist_party_long:0 "Comité de Oficiales Contra El Ateismo y Traidores"
+CHL_social_liberal_party:0 "PL"
+CHL_social_liberal_party_long:0 "Partido Liberal"
 CHL_market_liberal_party:0 "PR"
-CHL_market_liberal_party_long:0 "Facción Clásica del Partido Radical"
-CHL_radical_socialist_party:0 "PS"
-CHL_radical_socialist_party_long:0 "Partido Socialista de Chile"
-CHL_syndicalist_party:0 "PRD"
-CHL_syndicalist_party_long:0 "Partido Radical Doctrinario"
-CHL_totalist_party:0 "MRRC"
-CHL_totalist_party_long:0 "Movimiento Revolucionario Radical Chileno"
+CHL_market_liberal_party_long:0 "Partido Radical"
+CHL_radical_socialist_party:0 "SND"
+CHL_radical_socialist_party_long:0 "Socialistas Non Doctrinarios"
+CHL_syndicalist_party:0 "PS"
+CHL_syndicalist_party_long:0 "Partido Sindicalista"
+CHL_totalist_party:0 "PRP"
+CHL_totalist_party_long:0 "Partido Revolucionario Permanente"
 
 ### Events ###
-chl.1.t:0 "Earthquake in Chile"
-chl.1.d:0 "An earthquake in Chile killed 30.000 people and thousands of people are left homeless. We should do something to help them."
-chl.1.a:0 "Help the survivors"
-chl.1.b:0 "Who cares?"
-chl.2.t:0 "El Siglo is published"
-chl.2.d:0 "El Siglo is a Chilean weekly that is the official organ of the Chilean Syndicalist Party's Central Committee"
-chl.2.a:0 "Another paper to read! Lovely"
-chl.3.t:0 "Chile in 1936"
-chl.3.d:0 "After the Saltpetre War 1879 - 1883 in which Chile received the Peruvian saltpetre provinces Tarapacá and Arica in addition to the Bolivian coastal region of Antofagasta the country had command over vast copper deposits and monopolised the world trade in saltpetre. A phase of economic prosperity was initiated, supported by the high demand for saltpetre at the beginning of Weltkrieg. However, the chemical processes devised during that war to artificially produce saltpetre rendered Chile's deposits worthless. Worsening economic circumstances, together with the growth of the population increased social crisis. Workers and unions gained political influence. President Arturo Alessandri y Palma (1920 -1925, 1932 - 1938) tried to overcome the social tensions. A new constitution expanded the president's powers at the cost of the congress' authority."
-chl.3.a:0 "Let us hope peace reigns in our continent"
-chl.4.t:0 "The 1938 Presidential election"
-chl.4.d:0 "It is time for the next Presidential election. There are three parties that have a chance at winning, the Conservatives, the Social Democrats and the Liberals. Who will win?"
-chl.4.a:0 "The Conservatives win it!"
-chl.4.b:0 "The Social Democrats win it!"
-chl.4.c:0 "The Liberals win it!"
-chl.4.e:0 "The army shall put an end to this chaotic democracy!"
-chl.5.t:0 "The 1942 Presidential election"
-chl.5.d:0 "It is time for the next Presidential election. The Liberals decided to not run this time and therefore it is between the Conservatives and the Social Democrats. Who will win?"
-chl.5.a:0 "The Conservatives win it!"
-chl.5.b:0 "The Social Democrats win it!"
-chl.5.c:0 "The army shall put an end to this chaotic democracy!"
-chl.6.t:0 "The 1946 Presidential election"
-chl.6.d:0 "It is time for the next Presidential election. The Liberals decided to run again and therefore it is between them, the Conservatives and the Social Democrats. Who will win?"
-chl.6.a:0 "The Conservatives win it!"
-chl.6.b:0 "The Social Democrats win it!"
-chl.6.c:0 "The Liberal/Conservative Coalition wins it!"
-chl.6.e:0 "The army shall put an end to this chaotic democracy!"
+chl.1.t:0 
+chl.1.d:0 
+chl.1.a:0 
+chl.1.b:0 
+chl.2.t:0 
+chl.2.d:0 
+chl.2.a:0 
+chl.3.t:0 
+chl.3.d:0  
+chl.3.a:0 
+chl.4.t:0 
+chl.4.d:0 
+chl.4.a:0 
+chl.4.b:0 
+chl.4.c:0 
+chl.4.e:0 
+chl.5.t:0 
+chl.5.d:0 
+chl.5.a:0 
+chl.5.b:0 
+chl.5.c:0 
+chl.6.t:0 
+chl.6.d:0 
+chl.6.a:0 
+chl.6.b:0 
+chl.6.c:0 
+chl.6.e:0 
