Template for Mexican Industrial Tree

--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -436,7 +436,25 @@ MEX_Establish_Corporatism:0 "Establish Corporatism"
 MEX_Catholic_State:0 "Catholic State"
 MEX_Sinarquist_Youth:0 "Establish The Juventudes Sinarquistas"
 MEX_University:0 "Papal University"
-
+MEX_Economic_Reforms:0 "Economic Reforms"
+MEX_Invest_In_Industry:0 "Invest In Industry"
+MEX_Economic_Plan:0 "Economic Plan"
+MEX_Plan_Hope:0 "Plan 'Hope'"
+MEX_Develop_Infastructure:0 "Develop Infastructure"
+MEX_Expand_Power_Plants:0 "Expand Power Plants"
+MEX_Rural_Development_Program:0 "Rural Development Program"
+MEX_Civilian_Sector:0 "Expand Civilian Sector"
+MEX_Continue_Civilian_Expansion:0 "Continue Civilian Expansion"
+MEX_Finish_Civillian_Expansion:0 "Finish Civilian Expansion"
+MEX_Reduce_Import_Tarrifs:0 "Reduce Import Tarrifs"
+MEX_End_Of_Plan_Hope:0 "End Of Plan 'Hope'"
+MEX_Plan_Unity:0 "Plan 'Unity'"
+MEX_New_Dockyards:0 "New Dockyards"
+MEX_Protective_Tarrifs:0 "Protective Tarrifs"
+MEX_Heavy_Industry:0 "Heavy Industry"
+MEX_Continue_Industrial_Expansion:0 "Continue Industrial Expansion"
+MEX_Finish_Industrial_Expansion:0 "Finish Industrial Expansion"
+MEX_End_Of_Plan_Unity:0 "End Of Plan 'Unity'"
 MEX_Military_Reforms:0 "Military Reforms"
 MEX_Invest_In_Infantry:0 "Invest in Infantry"
 MEX_Modernise_The_High_Command:0 "Modernise the High Command"
